...
              <View style={styles.titleRow}>
                <Text accessibilityRole="header" style={[styles.title, { color: c.foreground }]}>
                  {title}
                </Text>
                {playback.isMine && (
                  <IconButton
                    testID="rename-video"
                    icon="pencil"
                    label={t.renameVideo.button(title)}
                    onPress={() => setRenaming(true)}
                  />
                )}
              </View>
...
